deployment/k8s/chat-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-dome-deployment
  namespace: default
  labels:
    app: chatdome

spec:
  replicas: 3
  selector:
    matchLabels:
      app: chatdome

  template:
    metadata:
      labels:
        app: chatdome

    spec:
      containers:
        - name: chatdome
          image: werayco/chatdome:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          startupProbe:
            httpGet:  
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
      restartPolicy: Always
