deployment/k8s/chat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-dome-service
spec:
  selector:
    app: chatdome

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
