deployment/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatdome-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: devrayco.name.ng
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-dome-service
                port:
                  number: 80
